<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="ExceptionConstants" Id="{ce5acfb3-e0ca-4e72-903e-13b08b2543d0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT	
	PATH_DELIMITER : WSTRING(1) := ".";
	UNSPECIFIED_METHOD : WSTRING(20) := "<unspecified method>";
	TIME_PREFIX : WSTRING(4) := " at ";
	SOURCE_PREFIX : WSTRING(4) := " in ";
	ERROR_CODE_PREFIX : WSTRING(13) := ", error code ";	
	SOURCE_POSITION_PREFIX : WSTRING(1) := " ";	
	INNER_MESSAGE_PREFIX : WSTRING(4) := " -> ";
	EXCEPTION_NUMBER_DELIMITER : WSTRING(1) := ":";
	SYSTEM_EXCEPTION_PREFIX : WSTRING(16) := "System exception";
	AGGREGATE_EXCEPTION_SUFFIX : WSTRING(25) := " aggregated exceptions";
	UNSPECIFIED_SOURCE : STRING := '<unspecified>';
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>